syntax = "proto3";
package Baseledger.baseledger.bridge;

option go_package = "github.com/Baseledger/baseledger/x/bridge/types";

message OrchestratorValidatorAddress {
  string orchestratorAddress = 1; 
  string validatorAddress = 2;
}

